# cmake-project-template

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
